[package]
name = "cstrptr"
version = "0.1.2" # keep in sync with html_root_url
authors = ["arc"]
edition = "2018"

description = "FFI-compatible and no-std &CStr"
documentation = "https://docs.rs/cstrptr/"
repository = "https://github.com/arcnmx/cstrptr-rs"
keywords = ["cstr", "cstring", "no-std"]
categories = ["no-std", "development-tools::ffi"]
license = "MIT"

include = [
	"/src/**",
	"/README*",
	"/COPYING*",
]

[package.metadata.docs.rs]
features = ["std", "unstable"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
cty = "0.2"
memchr = { version = "2.2", default-features = false, optional = true }

[features]
default = ["memchr"]
std = []
alloc = []
unstable = []
